Refactor tuners and results

--- a/Tutorials/prueba.html
+++ b/Tutorials/prueba.html
@@ -139,7 +139,7 @@ Loading required package: tidyverse
 <span id="cb4-4"><a href="#cb4-4" aria-hidden="true" tabindex="-1"></a>                          <span class="at">encode_cat_vars =</span> <span class="st">"all"</span></span>
 <span id="cb4-5"><a href="#cb4-5" aria-hidden="true" tabindex="-1"></a>                          )</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-<p>The function returns an object with the preprocessing information stored in it. We will need this object for the subsequent steps.</p>
+<p>The function returns an object with the preprocessing information stored in it. We will need this object for the subsequent steps. e</p>
 </section>
 <section id="model-definition" class="level2">
 <h2 class="anchored" data-anchor-id="model-definition">Model Definition</h2>
